--- a/Plugins/PluginsTest/packages.config
+++ b/Plugins/PluginsTest/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.4" targetFramework="net452" />
   <package id="MSTest.TestAdapter" version="1.2.1" targetFramework="net452" />
   <package id="MSTest.TestFramework" version="1.2.1" targetFramework="net452" />
   <package id="NUnit" version="3.10.1" targetFramework="net452" />
