Service Endpoint Working this time

--- a/Plugins/QueueConsumer/packages.config
+++ b/Plugins/QueueConsumer/packages.config
@@ -3,6 +3,7 @@
   <package id="Microsoft.Azure.Amqp" version="2.3.0" targetFramework="net461" />
   <package id="Microsoft.Azure.ServiceBus" version="3.1.0" targetFramework="net461" />
   <package id="Microsoft.Azure.Services.AppAuthentication" version="1.0.1" targetFramework="net461" />
+  <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.4" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.17.2" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.Logging" version="5.2.2" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.Tokens" version="5.2.2" targetFramework="net461" />
